Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,16 @@ before_script:
       if ! docker buildx ls | grep $BUILDER_NAME; then
         docker buildx create --name $BUILDER_NAME --use
       fi
-    - docker buildx build --builder $$BUILDER_NAME --pull --push --platform linux/amd64,linux/arm64/v8 --tag "$CI_REGISTRY_IMAGE:$VERSION${ALPINE:+-alpine}" $VERSION${ALPINE:+/alpine}
+    - |
+      DOCKER_TAGS="$VERSION${ALPINE:+-alpine}"
+      if [ "$VERSION" = "$LATEST_VERSION" ]; then
+        if [ "$ALPINE" ]; then
+          DOCKER_TAGS="$DOCKER_TAGS,latest-alpine"
+        else
+          DOCKER_TAGS="$DOCKER_TAGS,latest"
+        fi
+      fi
+    - docker buildx build --builder $$BUILDER_NAME --pull --push --platform linux/amd64,linux/arm64/v8 --tag "$CI_REGISTRY_IMAGE:$DOCKER_TAGS" $VERSION${ALPINE:+/alpine}
   rules:
     - if: $CI_COMMIT_REF_NAME == "main"
       changes:
