--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ before_script:
           DOCKER_TAGS="$DOCKER_TAGS,latest"
         fi
       fi
-    - docker buildx build --builder $$BUILDER_NAME --pull --push --platform linux/amd64,linux/arm64/v8 --tag "$CI_REGISTRY_IMAGE:$DOCKER_TAGS" $VERSION${ALPINE:+/alpine}
+    - docker buildx build --builder $BUILDER_NAME --pull --push --platform linux/amd64,linux/arm64/v8 --tag "$CI_REGISTRY_IMAGE:$DOCKER_TAGS" $VERSION${ALPINE:+/alpine}
   rules:
     - if: $CI_COMMIT_REF_NAME == "main"
       changes:
