--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -4,16 +4,16 @@
 
 FROM postgres:%%PG_MAJOR%%-%%DEBIAN_VERSION%%
 
-LABEL maintainer="Zachary Koesters <zachary@koesters.io>"
+LABEL maintainer="Zachary Koesters <zachary@koeste.rs>"
 
-ENV PGQ_VERSION %%PGQ_VERSION%%
+ENV PGQ_VERSION=%%PGQ_VERSION%%
 
 RUN apt-get update \
-      && apt-cache showpkg postgresql-$PG_MAJOR-pgq3-$POSTGIS_MAJOR \
+      && apt-cache showpkg postgresql-$PG_MAJOR-pgq3 \
       && apt-get install -y --no-install-recommends \
            ca-certificates \
            \
-           pgqd=$PGQ_VERSION \
+           pgqd=3.5-1 \
            postgresql-$PG_MAJOR-pgq3=$PGQ_VERSION \
       && rm -rf /var/lib/apt/lists/* \
       && mkdir -p /var/run/pgqd \
