feat: add build and push action
* Add build and push action triggered on Dockerfile pushes to main
* limit tests to only when Docker file changes happen

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
-# Copyright (c) 2024 Zachary Koesters
-
 name: Tests
 on:
   pull_request:
     branches: [ "main" ]
+    paths:
+      - "**/Dockerfile"
 permissions:
   contents: read
 jobs:
