--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -62,6 +62,7 @@ jobs:
           context: ${{ matrix.context }}
           platforms: linux/amd64,linux/arm64
           annotations: ${{ steps.meta.outputs.annotations }}
+          sbom: true
           provenance: mode=max
           push: true
           tags: ${{ env.IMAGE_NAME }}:${{ matrix.version }}
